# merge-versus-insert-replace

./: .gitignore  README.md  databricks.yml  pyproject.toml
notebooks/: 01_generate.py  02_benchmark.py  03_report.py
resources/: jobs.yml  warehouse.yml
results/: results.html  results.md
scripts/: run_direct.sh
sql/: ddl.sql
sql/strategies/: dynamic_partition_merge.sql  dynamic_partition_replace_on.sql  dynamic_partition_replace_using.sql  dynamic_partition_replace_where.sql  full_window_merge.sql  full_window_replace_on.sql  full_window_replace_using.sql  full_window_replace_where.sql  partial_overlap_merge.sql  partial_overlap_replace_on.sql  partial_overlap_replace_using.sql  partial_overlap_replace_where.sql  small_delta_merge.sql  small_delta_replace_on.sql  small_delta_replace_using.sql  small_delta_replace_where.sql
src/benchmark/: run_benchmark.py  scenarios.py  strategies.py
src/common/: config.py  schema.py  timing.py
src/generate/: generate_telemetry.py
src/report/: build_report.py
tests/: test_equivalence.py
